# pyrcept

./: README.md  pyproject.toml
examples/: basic_app.py  basic_local.py  basic_remote.py  time_series.py
pyrcept/: driver.py
