[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrcept"
version = "0.0.1"

dependencies = [
    "bottle",
]

requires-python = ">= 3.10"

authors = [
    {name = "Thomas A. Scott"},
]

description = "html/js based remote live plot viewing"

[project.urls]
Homepage = "https://github.com/tscott-00/pyrcept"
